# cshel-image-tools

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_code_mcp.md  claude_desktop_config.json
src/cshel_image_tools/: __init__.py  __main__.py  client.py  config.py  cost.py  images.py  safety.py  server.py
src/cshel_image_tools/tools/: _common.py  compose.py  edit.py  generate.py  upscale.py
tests/: test_config.py  test_cost.py  test_images.py  test_safety.py  test_tool_response_shape.py  test_tools_smoke.py
